tests/ui/closures/2229_closure_analysis/diagnostics/cant-mutate-imm.stderr
error[E0594]: cannot assign to `z.0.0.0`, as it is not declared as mutable
  --> $DIR/cant-mutate-imm.rs:12:9
   |
LL |         z.0.0.0 = 20;
   |         ^^^^^^^^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |     let mut z = (y, 10);
   |         +++

error[E0594]: cannot assign to `*bx.0`, as it is not declared as mutable
  --> $DIR/cant-mutate-imm.rs:24:9
   |
LL |         bx.0 = 20;
   |         ^^^^^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |     let mut bx = Box::new(x);
   |         +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0594`.
